nginx/resources/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: app
  labels:
    app: nginx-app
spec:
  selector:
    app: nginx-app
  internalTrafficPolicy: Local
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
