nginx/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/session-cookie-path: "/v1/"
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.sdombi.hu 
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
